--- a/public/styles.css
+++ b/public/styles.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css?family=Indie+Flower&display=swap");
+
 * {
   margin: 0;
   padding: 0;
@@ -6,6 +8,7 @@
 
 html {
   font-size: 100%;
+  font-family: 'Indie Flower';
 }
 #main {
   margin-right: 30%;
@@ -48,4 +51,6 @@ html {
   outline: 0 !important;
   border-radius: 1rem;
   margin: 1rem;
+  font-family: 'Indie Flower';
+  font-size: 1rem;
 }
